crates/toml_edit/tests/fixtures/invalid/spec/table-9-1.stderr
TOML parse error at line 6, column 1
  |
6 | [fruit.apple.taste]  # INVALID
  | ^
invalid table header
duplicate key `apple`
